k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: voicebook
  namespace: default
  labels:
    app: voicebook
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # For AWS
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # 3 hours
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 443
    targetPort: http
    protocol: TCP
    name: https
  selector:
    app: voicebook

---
apiVersion: v1
kind: Service
metadata:
  name: voicebook-headless
  namespace: default
  labels:
    app: voicebook
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8501
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: voicebook
